--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,5 +1,5 @@
 {
-    "about-title": "Sobre mi",
+    "about-title": "Sobre mí",
     "about-text": "Un apasionado del mundo de los videojuegos, con un firme compromiso por contribuir en la industria. Mi naturaleza curiosa y proactiva me impulsa a superar nuevos retos y demostrar mi talento en cada proyecto que me involucro.",
     "about-button1": "LinkedIn",
     "about-button2": "Mi CV",
