Project card layout

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -12,5 +12,7 @@
     "projects-title": "Mis juegos",
     "projects-subtitle": "Estos son algunos de los juegos que he desarrollado",
     "art-title": "Mi arte",
-    "art-subtitle": "Estas son algunas de las escenas que he elaborado"
+    "art-subtitle": "Estas son algunas de las escenas que he elaborado",
+    "game1-title": "Höllenhaus",
+    "game1-description": "¡Ni siquiera los fantasmas escapan del mundo laboral! Acepta clientes y haz pasar una mala noche a quien te pidan."
 }
