Button Play Now

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,5 +12,8 @@
     "projects-title": "My games",
     "projects-subtitle": "These are some of the games I have worked on",
     "art-title": "My Art",
-    "art-subtitle": "These are some of the renders I have worked on"
+    "art-subtitle": "These are some of the renders I have worked on",
+    "button-play": "Play now!",
+    "game1-title": "Höllenhaus",
+    "game1-description": "¡Ni siquiera los fantasmas escapan del mundo laboral! Acepta clientes y haz pasar una mala noche a quien te pidan."
 }
