--- a/i18n/es.json
+++ b/i18n/es.json
@@ -13,6 +13,7 @@
     "projects-subtitle": "Estos son algunos de los juegos que he desarrollado",
     "art-title": "Mi arte",
     "art-subtitle": "Estas son algunas de las escenas que he elaborado",
+    "button-play": "¡Juega ahora!",
     "game1-title": "Höllenhaus",
     "game1-description": "¡Ni siquiera los fantasmas escapan del mundo laboral! Acepta clientes y haz pasar una mala noche a quien te pidan."
 }
