--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,6 +8,8 @@
     "projects-button": "My games",
     "art-button": "3D Art",
     "mail": "Lparres2000@gmail.com",
+    "button-copy": "Copy",
+    "button-mail": "Text me",
     "game-title": "Wanna play a game?",
     "projects-title": "My games",
     "projects-subtitle": "These are some of the games I have worked on",
@@ -15,5 +17,5 @@
     "art-subtitle": "These are some of the renders I have worked on",
     "button-play": "Play now!",
     "game1-title": "Höllenhaus",
-    "game1-description": "¡Ni siquiera los fantasmas escapan del mundo laboral! Acepta clientes y haz pasar una mala noche a quien te pidan."
+    "game1-description": "Not even ghosts escape the labour world! Take on clients and give a bad night to whoever they ask."
 }
