--- a/i18n/es.json
+++ b/i18n/es.json
@@ -8,6 +8,8 @@
     "projects-button": "Mis juegos",
     "art-button": "Arte 3D",
     "mail": "Lparres2000@gmail.com",
+    "button-copy": "Copiar",
+    "button-mail": "Escríbeme",
     "game-title": "¿Quieres jugar?",
     "projects-title": "Mis juegos",
     "projects-subtitle": "Estos son algunos de los juegos que he desarrollado",
