Mail box is responsive

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "about-title": "About me",
-    "about-text": "I am passionate about the world of videogames, with a strong commitment to contribute to the industry. My curious and proactive nature drives me to overcome new challenges and demonstrate my talent in every project I get involved in.",
+    "about-text": "I am passionate about the world of videogames, with a strong commitment to contribute to the industry. My curious and proactive nature drives me to overcome new challenges and display my talent in every project I get involved in.",
     "about-button1": "LinkedIn",
     "about-button2": "My CV",
     "name-title": "Luis Parres",
