Projects section is responsive

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -22,6 +22,6 @@
     "game2-description": "Sett off on a new adventure with Arko, evolving together in a wonderful fantasy world.",
     "game3-title": "Survival Spectrum",
     "game3-description": "Survival wave action game based on the MBTI test. Developed with Phaser and hosted on its own website.",
-    "game4-title": "Procedural animation",
+    "game4-title": "Procedural anim.",
     "game4-description": "Final degree project where procedural animation techniques are investigated and implemented in video games."
 }
