Game box "under development"

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -23,5 +23,6 @@
     "game3-title": "Survival Spectrum",
     "game3-description": "Survival wave action game based on the MBTI test. Developed with Phaser and hosted on its own website.",
     "game4-title": "Procedural anim.",
-    "game4-description": "Final degree project where procedural animation techniques are investigated and implemented in video games."
+    "game4-description": "Final degree project where procedural animation techniques are investigated and implemented in video games.",
+    "game-development": "Under development"
 }
