AboutMe centered. Titles changed

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,7 +6,7 @@
     "name-title": "Luis Parres",
     "name-subtitle": "Game developer & 3D Generalist",
     "projects-button": "My games",
-    "art-button": "3D Art",
+    "art-button": "My art",
     "mail": "Lparres2000@gmail.com",
     "button-copy": "Copy",
     "button-mail": "Text me",
