--- a/i18n/es.json
+++ b/i18n/es.json
@@ -6,7 +6,7 @@
     "name-title": "Luis Parres",
     "name-subtitle": "Game developer & 3D Generalist",
     "projects-button": "Mis juegos",
-    "art-button": "Arte 3D",
+    "art-button": "Mi arte",
     "mail": "Lparres2000@gmail.com",
     "button-copy": "Copiar",
     "button-mail": "Escríbeme",
