resources clasification. Added low cuality resources

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -22,7 +22,7 @@
     "game2-description": "Embárcate en una nueva aventura junto a Arko, evolucionando juntos en un maravilloso mundo de fantasía.",
     "game3-title": "Survival Spectrum",
     "game3-description": "Juego de acción y supervivencia por oleadas basado en el test MBTI. Alojado en su propia página web.",
-    "game4-title": "Anim. prodecural",
+    "game4-title": "Anim. procedural",
     "game4-description": "Proyecto de fin de grado donde se investiga e implementa técnicas de animación procedural en videojuegos.",
     "game-development": "Juego en desarrollo"
 }
